driver/tests/ui/redef.stderr
error:  `main` function not found in file
[#ERROR_PLACEHOLDER] Error: the name: `foo` is defined multiple times
   ╭─[redef:1:1]
   │
 1 │ fn foo() {}
 2 │ fn foo() {}
   │ ────┬───  
   │     ╰───── `foo` redefined here
───╯
[#ERROR_PLACEHOLDER] Error: the name: `foo` is defined multiple times
   ╭─[redef:1:1]
   │
 1 │ fn foo() {}
   │ 
 3 │ fn foo() {}
   │ ────┬───  
   │     ╰───── `foo` redefined here
───╯
