driver/tests/ui/redef.src
fn foo() {}
fn foo() {}
fn foo() {}
